--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Was Blue.",
-  "name": "Was Blue. | A Personal Site.",
+  "short_name": "The Forest",
+  "name": "The Forest. | A Personal Site.",
   "icons": [
     {
       "src": "favicon.png",
